
Updating with asim-awb changes (rev. 2798 - Carl Beckmann)

- A small change which allows you to reserve all cores on a netbatch host
  with NETBATCH_MT_RESERVE_All_CORES=1 even if the minimum number of cores
  is set to only 1 with NETBATCH_MT_SLOTS_PER_CORE=1

----------
emer        Date: Mon Aug 24 19:34:05 EDT 2009  CSN: CSN-awb-332
                  Mon Aug 24 23:34:05 UTC 2009


Directory tools/scripts
 asim-run                  Locally Modified          331 

Revert changes in r330, which broke asim-run.

----------
emer        Date: Tue Aug 25 18:51:16 EDT 2009  CSN: CSN-awb-333
                  Tue Aug 25 22:51:16 UTC 2009


Directory tools/awb/apm-edit
 apm_edit.ui.h             Locally Modified          332 
 apm_edit.ui               Locally Modified          332 

Minor apm-edit improvements:

* Added column with 'flags' for each module in model
** Flag 'p' -> module has a non-default parameter value
** Flag 'n' -> module has notes
* Tabs titles in info box show a star (*) if there are:
** Non-default parameters
** Non-empty notes
* Selective opening of files in 'Files' tab of info box
** Double click on line, or
** Select line and click open button
** Context menu in alternatives list box still opens all files

----------
emer        Date: Wed Aug 26 16:37:13 EDT 2009  CSN: CSN-awb-334
                  Wed Aug 26 20:37:13 UTC 2009


Directory tools/awb/apm-edit
 apm_edit.ui               Locally Modified          333 

Restored missing Model->Insert menu...

----------
emer        Date: Fri Aug 28 17:05:11 EDT 2009  CSN: CSN-awb-335
                  Fri Aug 28 21:05:11 UTC 2009


Directory tools/scripts
 asimstarter.in            Locally Modified          334 
 apm-link                  Locally Added               0 

Added an experimental program (apm-link) that can be used to
combine (link) together a set of .apm and .awb files to form
a new .apm file where missing modules (holes) in the input files
have been filled with the other input files.