@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Architects Workbench
-CSN=CSN-awb-335
+CSN=CSN-awb-336
 Name=awb
 Tag=HEAD
 Lock=asim-asimcore
