@@ -109,6 +109,39 @@ sub submit {
 
 
 ################################################################
+
+=item $batch-E<gt>get_queue()
+
+Get the queue name
+
+=cut
+
+################################################################
+
+sub get_queue {
+  my $self = shift;
+
+  return "N/A";
+}
+
+################################################################
+
+=item $batch-E<gt>get_pool()
+
+Get the pool name
+
+=cut
+
+################################################################
+
+sub get_pool {
+  my $self = shift;
+
+  return "N/A";
+}
+
+
+################################################################
 #
 # Internal error utility function
 #
